[package]
name = "sc-consensus-fraud-proof"
description = "Subspace fraud proof verification in consensus"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
version = "0.1.0"
authors = ["Liu-Cheng Xu <xuliuchengxlc@gmail.com>"]
edition = "2021"
include = [
    "/src",
    "/Cargo.toml",
]

[dependencies]
async-trait = "0.1.68"
codec = { package = "parity-scale-codec", version = "3.6.1", features = ["derive"] }
sc-consensus = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", rev = "55c157cff49b638a59d81a9f971f0f9a66829c71" }
sp-api = { version = "4.0.0-dev", git = "https://github.com/subspace/substrate", rev = "55c157cff49b638a59d81a9f971f0f9a66829c71" }
sp-consensus = { version = "0.10.0-dev", git = "https://github.com/subspace/substrate", rev = "55c157cff49b638a59d81a9f971f0f9a66829c71" }
sp-domains = { version = "0.1.0", path = "../sp-domains" }
sp-runtime = { version = "24.0.0", git = "https://github.com/subspace/substrate", rev = "55c157cff49b638a59d81a9f971f0f9a66829c71" }
sp-settlement = { version = "0.1.0", path = "../sp-settlement" }
subspace-fraud-proof = { version = "0.1.0", path = "../subspace-fraud-proof" }
