[package]
name = "sc-consensus-poc-rpc"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "Subspace Labs <admin@subspace.network>"]
description = "RPC extensions for the PoC consensus algorithm"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://subspace.network"
repository = "https://github.com/subspace/subspace"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-oneshot = "0.5.0"
sc-consensus-poc = { version = "0.1.0", path = "../sc-consensus-poc" }
sc-rpc-api = { version = "0.10.0-dev", git = "https://github.com/paritytech/substrate", rev = "91b386ff07a85b3dd50ff3ed29c97e6b29d15f05" }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-pubsub = "18.0.0"
sp-consensus-poc = { version = "0.1.0", path = "../sp-consensus-poc" }
serde = { version = "1.0.127", features = ["derive"] }
futures = "0.3.17"
futures-timer = "3.0.2"
sp-api = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "91b386ff07a85b3dd50ff3ed29c97e6b29d15f05" }
sp-blockchain = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "91b386ff07a85b3dd50ff3ed29c97e6b29d15f05" }
sp-core = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "91b386ff07a85b3dd50ff3ed29c97e6b29d15f05" }
sp-runtime = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate", rev = "91b386ff07a85b3dd50ff3ed29c97e6b29d15f05" }
log = "0.4.14"
parking_lot = "0.11.1"
subspace-core-primitives = { version = "0.1.0", default-features = false, path = "../subspace-core-primitives" }

[dev-dependencies]
