[package]
name = "sc-consensus-subspace-rpc"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "Subspace Labs <admin@subspace.network>"]
description = "RPC extensions for the Subspace consensus algorithm"
edition = "2021"
license = "0BSD"
homepage = "https://subspace.network"
repository = "https://github.com/autonomys/subspace"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-oneshot = "0.5.9"
futures = "0.3.31"
futures-timer = "3.0.3"
jsonrpsee = { version = "0.24.5", features = ["server-core", "macros"] }
parking_lot = "0.12.2"
schnellru = "0.2.4"
sc-client-api = { git = "https://github.com/subspace/polkadot-sdk", rev = "0cadd3f11eb252ab37e6fae28cdba721ea5c08de" }
sc-consensus-subspace = { version = "0.1.0", path = "../sc-consensus-subspace" }
sc-rpc = { git = "https://github.com/subspace/polkadot-sdk", rev = "0cadd3f11eb252ab37e6fae28cdba721ea5c08de" }
sc-rpc-api = { git = "https://github.com/subspace/polkadot-sdk", rev = "0cadd3f11eb252ab37e6fae28cdba721ea5c08de" }
sc-utils = { git = "https://github.com/subspace/polkadot-sdk", rev = "0cadd3f11eb252ab37e6fae28cdba721ea5c08de" }
serde = { version = "1.0.216", default-features = false, features = ["alloc", "derive"] }
sp-api = { git = "https://github.com/subspace/polkadot-sdk", rev = "0cadd3f11eb252ab37e6fae28cdba721ea5c08de" }
sp-consensus = { git = "https://github.com/subspace/polkadot-sdk", rev = "0cadd3f11eb252ab37e6fae28cdba721ea5c08de" }
sp-consensus-subspace = { version = "0.1.0", path = "../sp-consensus-subspace" }
sp-blockchain = { git = "https://github.com/subspace/polkadot-sdk", rev = "0cadd3f11eb252ab37e6fae28cdba721ea5c08de" }
sp-core = { git = "https://github.com/subspace/polkadot-sdk", rev = "0cadd3f11eb252ab37e6fae28cdba721ea5c08de" }
sp-objects = { version = "0.1.0", path = "../sp-objects" }
sp-runtime = { git = "https://github.com/subspace/polkadot-sdk", rev = "0cadd3f11eb252ab37e6fae28cdba721ea5c08de" }
subspace-archiving = { version = "0.1.0", path = "../subspace-archiving" }
subspace-core-primitives = { version = "0.1.0", path = "../subspace-core-primitives" }
subspace-erasure-coding = { version = "0.1.0", path = "../subspace-erasure-coding" }
subspace-farmer-components = { version = "0.1.0", path = "../subspace-farmer-components" }
subspace-kzg = { version = "0.1.0", path = "../../shared/subspace-kzg" }
subspace-networking = { version = "0.1.0", path = "../subspace-networking" }
subspace-rpc-primitives = { version = "0.1.0", path = "../subspace-rpc-primitives" }
thiserror = "2.0.0"
tracing = "0.1.40"
