[package]
name = "sc-consensus-subspace-rpc"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "Subspace Labs <admin@subspace.network>"]
description = "RPC extensions for the Subspace consensus algorithm"
edition = "2021"
license = "0BSD"
homepage = "https://subspace.network"
repository = "https://github.com/autonomys/subspace"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-oneshot.workspace = true
futures.workspace = true
futures-timer.workspace = true
jsonrpsee = { workspace = true, features = ["server-core", "macros"] }
parking_lot.workspace = true
schnellru.workspace = true
sc-client-api.workspace = true
sc-consensus-subspace.workspace = true
sc-rpc.workspace = true
sc-rpc-api.workspace = true
sc-utils.workspace = true
serde = { workspace = true, features = ["alloc", "derive"] }
sp-api.workspace = true
sp-consensus.workspace = true
sp-consensus-subspace.workspace = true
sp-blockchain.workspace = true
sp-core.workspace = true
sp-objects.workspace = true
sp-runtime.workspace = true
subspace-archiving.workspace = true
subspace-core-primitives.workspace = true
subspace-erasure-coding.workspace = true
subspace-farmer-components.workspace = true
subspace-kzg.workspace = true
subspace-networking.workspace = true
subspace-rpc-primitives.workspace = true
thiserror.workspace = true
tracing.workspace = true
