[package]
name = "sc-consensus-subspace"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>", "Subspace Labs <admin@subspace.network>"]
description = "Subspace consensus algorithm for substrate"
edition.workspace = true
license = "0BSD"
homepage = "https://subspace.network"
repository = "https://github.com/autonomys/subspace"
documentation = "https://docs.rs/sc-consensus-subspace"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait.workspace = true
bytesize.workspace = true
parity-scale-codec = { workspace = true, features = ["derive"] }
futures.workspace = true
parking_lot.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rayon.workspace = true
schnorrkel.workspace = true
sc-client-api.workspace = true
sc-consensus.workspace = true
sc-consensus-slots.workspace = true
sc-proof-of-time.workspace = true
sc-telemetry.workspace = true
sc-transaction-pool-api.workspace = true
sc-utils.workspace = true
sp-api.workspace = true
sp-blockchain.workspace = true
sp-block-builder = { workspace = true, features = ["std"] }
sp-consensus.workspace = true
sp-consensus-subspace = { workspace = true, features = ["std"] }
sp-consensus-slots.workspace = true
sp-core.workspace = true
sp-inherents.workspace = true
sp-objects = { workspace = true, features = ["std"] }
sp-runtime.workspace = true
sp-weights.workspace = true
subspace-archiving.workspace = true
subspace-core-primitives.workspace = true
subspace-erasure-coding.workspace = true
subspace-kzg.workspace = true
subspace-proof-of-space.workspace = true
subspace-verification.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "time"] }
tracing.workspace = true

[dev-dependencies]
# TODO: Restore in the future, currently tests are mostly broken and useless
#sc-block-builder = { git = "https://github.com/subspace/substrate", rev = "88bb945975301f9b29bad96dc4590c33f1029eae" }
#sc-cli = { git = "https://github.com/subspace/substrate", rev = "88bb945975301f9b29bad96dc4590c33f1029eae", default-features = false }
#sc-service = { git = "https://github.com/subspace/substrate", rev = "88bb945975301f9b29bad96dc4590c33f1029eae", default-features = false }
#sc-network = { git = "https://github.com/subspace/substrate", rev = "88bb945975301f9b29bad96dc4590c33f1029eae" }
#sp-timestamp = { git = "https://github.com/subspace/substrate", rev = "88bb945975301f9b29bad96dc4590c33f1029eae" }
#sp-tracing = { version = "6.0.0", git = "https://github.com/subspace/substrate", rev = "88bb945975301f9b29bad96dc4590c33f1029eae" }
#sc-network-test = { version = "0.8.0", path = "../../substrate/sc-network-test" }
#subspace-proof-of-space = { version = "0.1.0", path = "../subspace-proof-of-space", features = ["shim"] }
#substrate-test-runtime = { version = "2.0.0", path = "../../substrate/substrate-test-runtime" }
#substrate-test-runtime-client = { version = "2.0.0", path = "../../substrate/substrate-test-runtime-client" }
#tokio = "1.27.0"
