[package]
name = "sc-domains"
version = "0.1.0"
authors = ["Subspace Labs <https://subspace.network>"]
description = "Subspace service."
edition = "2021"
license = "0BSD"
homepage = "https://subspace.network"
repository = "https://github.com/autonomys/subspace"
include = [
    "/src",
    "/Cargo.toml",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
frame-benchmarking = { workspace = true, optional = true }
sc-client-api.workspace = true
sc-executor.workspace = true
sp-api.workspace = true
sp-auto-id.workspace = true
sp-blockchain.workspace = true
sp-core.workspace = true
sp-domains.workspace = true
sp-domains-fraud-proof.workspace = true
sp-externalities.workspace = true
sp-io.workspace = true
sp-messenger-host-functions.workspace = true
sp-runtime.workspace = true
sp-subspace-mmr.workspace = true

[features]
runtime-benchmarks = ["dep:frame-benchmarking"]
