[package]
name = "sc-domains"
version = "0.1.0"
authors = ["Subspace Labs <https://subspace.network>"]
description = "Subspace service."
edition = "2021"
license = "0BSD"
homepage = "https://subspace.network"
repository = "https://github.com/autonomys/subspace"
include = [
    "/src",
    "/Cargo.toml",
]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
array-bytes.workspace = true
async-channel.workspace = true
domain-runtime-primitives.workspace = true
frame-benchmarking = { workspace = true, optional = true }
futures.workspace = true
parity-scale-codec.workspace = true
sc-client-api.workspace = true
sc-executor.workspace = true
sc-network.workspace = true
sc-network-sync.workspace = true
sp-api.workspace = true
sp-auto-id = { workspace = true, features = ["std"] }
sp-blockchain.workspace = true
sp-core.workspace = true
sp-domains = { workspace = true, features = ["std"] }
sp-domains-fraud-proof = { workspace = true, features = ["std"] }
sp-externalities.workspace = true
sp-io.workspace = true
sp-messenger-host-functions = { workspace = true, features = ["std"] }
sp-runtime.workspace = true
sp-subspace-mmr.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[features]
runtime-benchmarks = ["dep:frame-benchmarking"]
